{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 401,
  "lineage": "228db2e8-107f-74bf-16ea-05259b24d619",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1a49ccce14913a8",
            "domain": "vpc",
            "id": "eipalloc-0e1a49ccce14913a8",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-51-90-113.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.90.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "cloudheight-nats0"
            },
            "tags_all": {
              "name": "cloudheight-nats0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007c73f33bbc253ee",
            "domain": "vpc",
            "id": "eipalloc-007c73f33bbc253ee",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-137-215.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.137.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "cloudheight-nats1"
            },
            "tags_all": {
              "name": "cloudheight-nats1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0914547665e6a707c",
            "arn": "arn:aws:ec2:eu-north-1:851725214577:instance/i-092087b0d55d4cfe9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092087b0d55d4cfe9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07461c2f22fecc0f9",
            "private_dns": "ip-10-0-1-51.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "public_ip": "16.171.114.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041e56c912e921cdd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e98f340c8fdbf2e",
            "tags": {
              "Name": "Cloudhight"
            },
            "tags_all": {
              "Name": "Cloudhight"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e628ff8538fe9676"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_ami.ubuntu_22_04_ami",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:internet-gateway/igw-0d42df70827acc591",
            "id": "igw-0d42df70827acc591",
            "owner_id": "851725214577",
            "tags": {
              "name": "cloudheight"
            },
            "tags_all": {
              "name": "cloudheight"
            },
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "dependencies": [
            "aws_vpc.cloudheight_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:loadbalancer/app/main-lb-tf/747e837e4780942e",
            "arn_suffix": "app/main-lb-tf/747e837e4780942e",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-lb-tf-1849370251.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:loadbalancer/app/main-lb-tf/747e837e4780942e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0510ea4e31037bba7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07e98f340c8fdbf2e"
              },
              {
                "subnet_id": "subnet-08af8d0174e79a436"
              }
            ],
            "subnets": [
              "subnet-07e98f340c8fdbf2e",
              "subnet-08af8d0174e79a436"
            ],
            "tags": {
              "Environment": "cloudheight-loadbalancer-my-sg"
            },
            "tags_all": {
              "Environment": "cloudheight-loadbalancer-my-sg"
            },
            "vpc_id": "vpc-008cc6719caf88fd1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:listener/app/main-lb-tf/747e837e4780942e/891e275c09398352",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:targetgroup/tf-main-lb-tg/9505c52d3e2c0357",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:listener/app/main-lb-tf/747e837e4780942e/891e275c09398352",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:loadbalancer/app/main-lb-tf/747e837e4780942e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main_elb",
            "aws_lb_target_group.main",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:targetgroup/tf-main-lb-tg/9505c52d3e2c0357",
            "arn_suffix": "targetgroup/tf-main-lb-tg/9505c52d3e2c0357",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:851725214577:targetgroup/tf-main-lb-tg/9505c52d3e2c0357",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-main-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "dependencies": [
            "aws_vpc.cloudheight_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1a49ccce14913a8",
            "association_id": "eipassoc-0b232e7073e9e7736",
            "connectivity_type": "public",
            "id": "nat-0303f5d54055d1e39",
            "network_interface_id": "eni-08664dc8798c76ac3",
            "private_ip": "10.0.1.210",
            "public_ip": "13.51.90.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e98f340c8fdbf2e",
            "tags": {
              "name": "cloudheight-main0"
            },
            "tags_all": {
              "name": "cloudheight-main0"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007c73f33bbc253ee",
            "association_id": "eipassoc-0d26627fc73015759",
            "connectivity_type": "public",
            "id": "nat-0b62ddb7077713113",
            "network_interface_id": "eni-07bfd397be0e30c4e",
            "private_ip": "10.0.2.216",
            "public_ip": "51.21.137.215",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08af8d0174e79a436",
            "tags": {
              "name": "cloudheight-main1"
            },
            "tags_all": {
              "name": "cloudheight-main1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:route-table/rtb-066c223253d705fc6",
            "id": "rtb-066c223253d705fc6",
            "owner_id": "851725214577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0303f5d54055d1e39",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "private0"
            },
            "tags_all": {
              "name": "private0"
            },
            "timeouts": null,
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:route-table/rtb-0df8888364e473850",
            "id": "rtb-0df8888364e473850",
            "owner_id": "851725214577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b62ddb7077713113",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "private1"
            },
            "tags_all": {
              "name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:route-table/rtb-0504c14941754623f",
            "id": "rtb-0504c14941754623f",
            "owner_id": "851725214577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d42df70827acc591",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.cloudheight_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd821300d744c9aa",
            "route_table_id": "rtb-066c223253d705fc6",
            "subnet_id": "subnet-0b7d5969f1588c0a3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e75a0f27cff3ff",
            "route_table_id": "rtb-0df8888364e473850",
            "subnet_id": "subnet-056c91cffab590fec"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a7d74c48a38c925",
            "route_table_id": "rtb-0504c14941754623f",
            "subnet_id": "subnet-07e98f340c8fdbf2e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b8fbbcbf515646e",
            "route_table_id": "rtb-0504c14941754623f",
            "subnet_id": "subnet-08af8d0174e79a436"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:security-group/sg-0e628ff8538fe9676",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e628ff8538fe9676",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Http traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloudheight-jenkins",
            "name_prefix": "",
            "owner_id": "851725214577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudheight-my-sg"
            },
            "tags_all": {
              "Name": "cloudheight-my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudheight_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:security-group/sg-0510ea4e31037bba7",
            "description": "Allow HTTP to the load balanacer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0510ea4e31037bba7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP FROM ANYWHERE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudheight-load-balancer",
            "name_prefix": "",
            "owner_id": "851725214577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudheight-loadbalancer-my-sg"
            },
            "tags_all": {
              "Name": "cloudheight-loadbalancer-my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudheight_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:security-group/sg-06b6a13e216a6aa9c",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b6a13e216a6aa9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Http from load balancer",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0510ea4e31037bba7"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cloudheight-private",
            "name_prefix": "",
            "owner_id": "851725214577",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudheight-my-sg"
            },
            "tags_all": {
              "Name": "cloudheight-my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.cloudheight_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:subnet/subnet-0b7d5969f1588c0a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7d5969f1588c0a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725214577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "cloudheight-private0"
            },
            "tags_all": {
              "name": "cloudheight-private0"
            },
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "dependencies": [
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:subnet/subnet-056c91cffab590fec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056c91cffab590fec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725214577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "cloudheight-private1"
            },
            "tags_all": {
              "name": "cloudheight-private1"
            },
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "dependencies": [
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:subnet/subnet-07e98f340c8fdbf2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e98f340c8fdbf2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725214577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "cloudheight-public0"
            },
            "tags_all": {
              "name": "cloudheight-public0"
            },
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "dependencies": [
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:subnet/subnet-08af8d0174e79a436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08af8d0174e79a436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725214577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "cloudheight-public1"
            },
            "tags_all": {
              "name": "cloudheight-public1"
            },
            "vpc_id": "vpc-008cc6719caf88fd1"
          },
          "dependencies": [
            "aws_vpc.cloudheight_vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudheight_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:851725214577:vpc/vpc-008cc6719caf88fd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4f57fc83d67d1b7",
            "default_route_table_id": "rtb-0ca85aa48c6b22557",
            "default_security_group_id": "sg-02072ab890f4f9bad",
            "dhcp_options_id": "dopt-0af50a69b2fd52f5a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008cc6719caf88fd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca85aa48c6b22557",
            "owner_id": "851725214577",
            "tags": {
              "name": "cloudheight"
            },
            "tags_all": {
              "name": "cloudheight"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}